--- a/src/pages/orders/index.astro
+++ b/src/pages/orders/index.astro
@@ -1,19 +1,15 @@
 ---
 import OrdersPage from "@/components/routes/Orders";
 import AuthenticatedLayout from "@/layouts/AuthenticatedLayout.astro";
-import { checkPageRedirect } from "@/lib/authUtils";
+import { getPageData } from "@/lib/authUtils";
 
-const redirect = await checkPageRedirect(
-	Astro.url,
-	Astro.locals.user,
-	Astro.locals.session,
-);
+const pageData = await getPageData(Astro);
 
-if (redirect) {
-	return Astro.redirect(redirect);
+if (pageData.redirect) {
+	return Astro.redirect(pageData.redirect);
 }
 ---
 
-<AuthenticatedLayout>
+<AuthenticatedLayout {...pageData}>
 	<OrdersPage client:load />
 </AuthenticatedLayout>
