--- a/src/layouts/AuthenticatedLayout.astro
+++ b/src/layouts/AuthenticatedLayout.astro
@@ -5,8 +5,8 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 
 interface Props {
 	currentPath?: string;
-	currentOrganization?: OrganizationAndMember;
-	user?: User;
+	currentOrganization?: OrganizationAndMember | null;
+	user?: User | null;
 }
 
 const { currentPath, currentOrganization, user } = Astro.props;
