--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -1,5 +1,5 @@
 ---
-import { Signup as SignupForm } from "@/components/auth/SignUp";
+import { Signup as SignupForm } from "@/components/auth/signup-page";
 import PublicLayout from "@/layouts/PublicLayout.astro";
 import { getPageData } from "@/lib/authUtils";
 
