--- a/src/pages/patients/index.astro
+++ b/src/pages/patients/index.astro
@@ -1,8 +1,6 @@
 ---
-import { ChairsCalendar } from "@/components/routes/calendar/chairs-calendar";
+import { PatientList } from "@/components/routes/patients/patient-list";
 import AuthenticatedLayout from "@/layouts/AuthenticatedLayout.astro";
-import { organization } from "@/lib/authClient";
-import { checkPageRedirect } from "@/lib/authUtils";
 import { getPageData } from "@/lib/authUtils";
 
 const pageData = await getPageData(Astro);
@@ -11,9 +9,9 @@ if (pageData.redirect) {
 	return Astro.redirect(pageData.redirect);
 }
 
-const title = "Calendar";
+const title = "Patients";
 ---
 
 <AuthenticatedLayout {...pageData} title={title}>
-	<ChairsCalendar client:load />
+	<PatientList client:load />
 </AuthenticatedLayout>
